--- a/.github/workflows/url-checker.test.yml
+++ b/.github/workflows/url-checker.test.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: "22.x"
+          node-version: '22.x'
 
       - name: Setup dependencies
         run: npm install
